<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rulesTitle"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:gravity="center"
        android:textSize="50dp">
    </TextView>

    <TextView
        android:id="@+id/counter_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rulesText"
        android:textColor="@color/black"
        android:textSize="20dp">

    </TextView>

    <Button
        android:id="@+id/home_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_rules">
    </Button>


</LinearLayout>