<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameover"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:gravity="center">
    </TextView>

    <TextView
        android:id="@+id/counter_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_textview"
        android:textColor="@color/black"
        android:gravity="center">
    </TextView>

    <Button
        android:id="@+id/restart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/restart_text">
    </Button>

    <Button
        android:id="@+id/home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_text">
    </Button>

</LinearLayout>